ibm1 initial attempt